--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
   <script type="importmap">
     {
         "imports": {
-            "three": "./build/three.module.js",
+            "three": "three",
             "three/examples/jsm/controls/OrbitControls":"./jsm/controls/OrbitControls.js",
-            "three/examples/jsm/libs/stats.module":"./jsm/libs/stats.module.js",
         }
     }
 </script>
