--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 
       <p>
       <ul>
-        <li><a href="tihcollegespace.epizy.com">TIHCollegeSpace</a></li>
+        <li><a href="https://tihcollegespace.epizy.com/">TIHCollegeSpace</a></li>
         It's and edtech websites build during covid for making easier the online class process for our college.
-        <li><a href="taxlix.com">Taxlix</a></li>
+        <li><a href="https://taxlix.com/">Taxlix</a></li>
         It's a freelance project for a FinTech company.
       </ul>
 
